--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,11 +6,15 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.empezamosapp2.LoginActivity" >
+    tools:context="com.example.empezamosapp2.LoginActivity"
+    android:orientation="vertical" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+    <EditText android:id="@id/login_username" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="Username" android:singleLine="true" android:layout_below="@id/login_msg" />
+    <EditText android:id="@id/login_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="Password" android:singleLine="true" android:layout_below="@id/login_username" android:inputType="textPassword" />
+    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@android:style/ButtonBar">
+        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Confirm" android:layout_weight="1.0" android:onClick="onConfirmClick" />
+        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Cancel" android:layout_weight="1.0" android:onClick="onCancelClick" />
+        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Register" android:layout_weight="1.0" android:onClick="onRegisterClick" />
+    </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
